# ChangeLog for sys-libs/ncurses
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
# $Header: /var/cvsroot/gentoo-x86/sys-libs/ncurses/ChangeLog,v 1.4 2002/04/05 07:27:35 gbevin Exp $

*ncurses-5.2.20020112a-r1 (205 Apr 2002)

  05 Apr 2002; Geert Bevin <gbevin@gentoo.org> :

  Small header file fix to make apps that use ncurses compile correctly with gcc3.
	
*ncurses-5.2.20020112a (21 Mar 2002)

  21 Mar 2002; Grant Goodyear <g2boojum@gentoo.org> :

  New version that compiles w/ gcc3.
	
*ncurses-5.2-r5 (21 Mar 2002)

  12 Mar 2002; Seemant Kulleen <seemant@gentoo.org> ncurses-5.2-r5.ebuild :
	
  stefan@mdy.univie.ac.at pointed out html documentation getting gzipped
  unnecessarily.  This is now fixed in r5.  I noticed a prior r4 which does
  not work anyway, so this is based off r3.

*ncurses-5.2-r3 (1 Feb 2002)

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.