@@ -1,0 +1,2 @@
+MD5 464d6a49010cf2a6eb9ce59a264d4d47 ncurses-5.2.tar.gz 1743818
+MD5 09ddc8b2eee779d2ddd8504547da5822 ncurses-5.2.20020511.diff.bz2 650642
