@@ -1,6 +1,12 @@
 # ChangeLog for sys-libs/ncurses
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/ncurses/ChangeLog,v 1.4 2002/04/05 07:27:35 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/ncurses/ChangeLog,v 1.5 2002/05/18 05:13:39 woodchip Exp $
+
+*ncurses-5.2.20020511 (18 May 2002)
+
+  18 May 2002; Donny Davies <woodchip@gentoo.org> :
+
+  New snapshot for gcc-3.x testing.
 
 *ncurses-5.2.20020112a-r1 (205 Apr 2002)
 
